--- a/index.html
+++ b/index.html
@@ -171,9 +171,10 @@
                 <div class="glass p-8 rounded-3xl text-center border-2 border-green-500/20 bg-green-500/5">
                     <i class="fab fa-python text-green-500 text-3xl mb-4"></i>
                     <h3 class="font-bold mb-4 uppercase text-xs tracking-widest text-green-400">Live Execution</h3>
-                    <a href="[LINK]" target="_blank"
-                        class="px-6 py-2 bg-green-600 rounded-full text-[10px] font-black hover:bg-green-500 transition shadow-lg shadow-green-900/40">VIEW
-                        CODE / DEMO</a>
+                    <a href="https://github.com/mahirdesai2004/pbl4-parkinsons-eeg" target="_blank"
+                        class="px-8 py-3 bg-green-600 rounded-full text-xs font-black hover:bg-green-500 transition shadow-lg shadow-green-900/40 w-full inline-block">
+                        <i class="fab fa-github mr-2"></i> VIEW GITHUB REPOSITORY
+                    </a>
                 </div>
             </div>
         </section>
@@ -183,121 +184,142 @@
                 Research <span class="text-blue-500">Workflow</span>
             </h2>
 
-            <div class="flex flex-wrap justify-center gap-6 mt-10">
+            <section id="pipeline" class="space-y-16 text-center">
+                <h2 class="text-4xl font-black uppercase tracking-tight">
+                    Research <span class="text-blue-500">Workflow</span>
+                </h2>
 
-                <div data-aos="fade-up" class="glass px-6 py-4 rounded-2xl border border-blue-500/20">
-                    Raw EEG
-                </div>
+                <!-- Horizontal Process Diagram -->
+                <div class="flex flex-wrap justify-center items-center gap-4 mt-10">
 
-                <div data-aos="fade-up" class="glass px-6 py-4 rounded-2xl border border-purple-500/20">
-                    Bandpass Filtering (1–40 Hz)
-                </div>
-
-                <div data-aos="fade-up" class="glass px-6 py-4 rounded-2xl border border-green-500/20">
-                    3s Windowing (50% Overlap)
-                </div>
-
-                <div data-aos="fade-up" class="glass px-6 py-4 rounded-2xl border border-blue-500/20">
-                    EEGNet (2.6K Params)
-                </div>
-
-                <div data-aos="fade-up" class="glass px-6 py-4 rounded-2xl border border-purple-500/20">
-                    Leave-One-Subject-Out
-                </div>
-
-                <div data-aos="fade-up" class="glass px-6 py-4 rounded-2xl border border-green-500/20">
-                    Subject-Level Aggregation
-                </div>
-
-                <div data-aos="fade-up" class="glass px-6 py-4 rounded-2xl border border-blue-500/20">
-                    Balanced Accuracy & AUC
-                </div>
-
-            </div>
-        </section>
-
-        <section id="results" class="glass p-12 rounded-[3.5rem] border-t-4 border-blue-500">
-            <h2 class="text-3xl font-black mb-12 text-center uppercase tracking-tight">Results & <span
-                    class="text-blue-500">Analysis</span></h2>
-            <div class="grid md:grid-cols-2 gap-16 items-center">
-                <div class="h-80"><canvas id="resultsChart"></canvas></div>
-                <div class="space-y-6">
-                    <div
-                        class="p-6 rounded-2xl bg-white/5 flex justify-between items-center border border-white/10 shadow-inner">
-                        <span class="text-slate-400 font-bold uppercase text-xs tracking-widest">Accuracy /
-                            Performance</span>
+                    <div data-aos="fade-up" data-aos-delay="0"
+                        class="glass px-6 py-3 rounded-full border border-blue-500/30 text-xs font-bold uppercase tracking-wider hover:shadow-[0_0_15px_rgba(59,130,246,0.5)] transition-all duration-300">
+                        Raw EEG
                     </div>
 
-                    <div class="grid grid-cols-2 md:grid-cols-4 gap-6 mt-12 text-center">
+                    <i class="fas fa-arrow-right text-slate-600 text-sm hidden md:block"></i>
+                    <i class="fas fa-arrow-down text-slate-600 text-sm md:hidden"></i>
 
-                        <div data-aos="fade-up" class="glass p-6 rounded-2xl">
-                            <p class="text-slate-400 text-xs uppercase tracking-widest">Balanced Accuracy</p>
-                            <h3 class="text-3xl font-black text-blue-400 counter" data-target="74.58">0</h3>
-                        </div>
-
-                        <div data-aos="fade-up" class="glass p-6 rounded-2xl">
-                            <p class="text-slate-400 text-xs uppercase tracking-widest">AUC</p>
-                            <h3 class="text-3xl font-black text-purple-400 counter" data-target="78.75">0</h3>
-                        </div>
-
-                        <div data-aos="fade-up" class="glass p-6 rounded-2xl">
-                            <p class="text-slate-400 text-xs uppercase tracking-widest">Sensitivity</p>
-                            <h3 class="text-3xl font-black text-green-400 counter" data-target="86.67">0</h3>
-                        </div>
-
-                        <div data-aos="fade-up" class="glass p-6 rounded-2xl">
-                            <p class="text-slate-400 text-xs uppercase tracking-widest">Specificity</p>
-                            <h3 class="text-3xl font-black text-red-400 counter" data-target="62.5">0</h3>
-                        </div>
-
+                    <div data-aos="fade-up" data-aos-delay="100"
+                        class="glass px-6 py-3 rounded-full border border-purple-500/30 text-xs font-bold uppercase tracking-wider hover:shadow-[0_0_15px_rgba(168,85,247,0.5)] transition-all duration-300">
+                        Filtering (1–40 Hz)
                     </div>
-                    <p class="text-slate-500 text-sm italic text-justify leading-relaxed">Subject-Level Balanced
-                        Accuracy: 74.58%<br>AUC: 0.7875<br>Sensitivity: 86.67%<br>Specificity: 62.5%<br>Compared against
-                        bandpower baseline (Balanced Accuracy: 71.46%)</p>
+
+                    <i class="fas fa-arrow-right text-slate-600 text-sm hidden md:block"></i>
+                    <i class="fas fa-arrow-down text-slate-600 text-sm md:hidden"></i>
+
+                    <div data-aos="fade-up" data-aos-delay="200"
+                        class="glass px-6 py-3 rounded-full border border-green-500/30 text-xs font-bold uppercase tracking-wider hover:shadow-[0_0_15px_rgba(34,197,94,0.5)] transition-all duration-300">
+                        3s Windowing
+                    </div>
+
+                    <i class="fas fa-arrow-right text-slate-600 text-sm hidden md:block"></i>
+                    <i class="fas fa-arrow-down text-slate-600 text-sm md:hidden"></i>
+
+                    <div data-aos="fade-up" data-aos-delay="300"
+                        class="glass px-6 py-3 rounded-full border border-blue-500/30 text-xs font-bold uppercase tracking-wider hover:shadow-[0_0_15px_rgba(59,130,246,0.5)] transition-all duration-300">
+                        EEGNet
+                    </div>
+
+                    <i class="fas fa-arrow-right text-slate-600 text-sm hidden md:block"></i>
+                    <i class="fas fa-arrow-down text-slate-600 text-sm md:hidden"></i>
+
+                    <div data-aos="fade-up" data-aos-delay="400"
+                        class="glass px-6 py-3 rounded-full border border-purple-500/30 text-xs font-bold uppercase tracking-wider hover:shadow-[0_0_15px_rgba(168,85,247,0.5)] transition-all duration-300">
+                        LOSO Validation
+                    </div>
+
+                    <i class="fas fa-arrow-right text-slate-600 text-sm hidden md:block"></i>
+                    <i class="fas fa-arrow-down text-slate-600 text-sm md:hidden"></i>
+
+                    <div data-aos="fade-up" data-aos-delay="500"
+                        class="glass px-6 py-3 rounded-full border border-green-500/30 text-xs font-bold uppercase tracking-wider hover:shadow-[0_0_15px_rgba(34,197,94,0.5)] transition-all duration-300">
+                        Subject Aggregation
+                    </div>
+
+                    <i class="fas fa-arrow-right text-slate-600 text-sm hidden md:block"></i>
+                    <i class="fas fa-arrow-down text-slate-600 text-sm md:hidden"></i>
+
+                    <div data-aos="fade-up" data-aos-delay="600"
+                        class="glass px-6 py-3 rounded-full border border-blue-500/30 text-xs font-bold uppercase tracking-wider hover:shadow-[0_0_15px_rgba(59,130,246,0.5)] transition-all duration-300">
+                        Metrics (BA + AUC)
+                    </div>
+
                 </div>
-            </div>
-        </section>
+            </section>
 
-        <div class="mt-12 text-center">
-            <span class="px-8 py-3 bg-green-600 rounded-full text-xs font-black uppercase tracking-widest shadow-lg">
-                Conference Paper Accepted – ICICC 2026
-            </span>
-        </div>
+            <section id="results" class="glass p-12 rounded-[3.5rem] border-t-4 border-blue-500">
+                <h2 class="text-3xl font-black mb-2 text-center uppercase tracking-tight">Results & <span
+                        class="text-blue-500">Analysis</span></h2>
+                <p class="text-center text-slate-500 text-xs font-medium uppercase tracking-widest mb-12 opacity-80">
+                    Validated using strict Leave-One-Subject-Out cross-validation on 31 subjects</p>
+                <div class="grid md:grid-cols-2 gap-16 items-center">
+                    <div class="h-80"><canvas id="resultsChart"></canvas></div>
+                    <div class="space-y-6">
+                        <div
+                            class="p-6 rounded-2xl bg-white/5 flex justify-between items-center border border-white/10 shadow-inner">
+                            <span class="text-slate-400 font-bold uppercase text-xs tracking-widest">Accuracy /
+                                Performance</span>
+                        </div>
 
-        <section id="resources" class="text-center space-y-10 pt-20">
-            <h2 class="text-4xl font-black uppercase tracking-tight">
-                Code & <span class="text-blue-500">Resources</span>
-            </h2>
+                        <div class="grid grid-cols-2 md:grid-cols-4 gap-6 mt-12 text-center">
 
-            <div class="flex flex-wrap justify-center gap-6">
+                            <div data-aos="fade-up"
+                                class="glass p-6 rounded-2xl border-t-4 border-blue-500 hover:scale-105 transition-transform duration-300">
+                                <p class="text-slate-400 text-xs uppercase tracking-widest mb-2">Balanced Accuracy</p>
+                                <h3 class="text-4xl font-black text-blue-400 counter" data-target="74.58">0</h3>
+                            </div>
 
-                <a href="https://github.com/mahirdesai2004/pbl4-parkinsons-eeg" target="_blank"
-                    class="px-8 py-4 bg-blue-600 rounded-full text-xs font-black uppercase tracking-widest shadow-lg hover:bg-blue-500 transition">
-                    <i class="fab fa-github mr-2"></i> View GitHub Repository
-                </a>
+                            <div data-aos="fade-up" data-aos-delay="100"
+                                class="glass p-6 rounded-2xl border-t-4 border-purple-500 hover:scale-105 transition-transform duration-300">
+                                <p class="text-slate-400 text-xs uppercase tracking-widest mb-2">AUC</p>
+                                <h3 class="text-4xl font-black text-purple-400 counter" data-target="78.75">0</h3>
+                            </div>
 
-                <a href="#" target="_blank"
-                    class="px-8 py-4 bg-green-600 rounded-full text-xs font-black uppercase tracking-widest shadow-lg hover:bg-green-500 transition">
-                    <i class="fab fa-python mr-2"></i> View Colab Notebook
-                </a>
+                            <div data-aos="fade-up" data-aos-delay="200"
+                                class="glass p-6 rounded-2xl border-t-4 border-green-500 hover:scale-105 transition-transform duration-300">
+                                <p class="text-slate-400 text-xs uppercase tracking-widest mb-2">Sensitivity</p>
+                                <h3 class="text-4xl font-black text-green-400 counter" data-target="86.67">0</h3>
+                            </div>
 
-            </div>
-        </section>
+                            <div data-aos="fade-up" data-aos-delay="300"
+                                class="glass p-6 rounded-2xl border-t-4 border-red-500 hover:scale-105 transition-transform duration-300">
+                                <p class="text-slate-400 text-xs uppercase tracking-widest mb-2">Specificity</p>
+                                <h3 class="text-4xl font-black text-red-400 counter" data-target="62.5">0</h3>
+                            </div>
 
-        <section id="team" class="text-center pt-10 border-t border-slate-900">
-            <h2 class="text-[10px] font-black text-slate-600 uppercase tracking-[0.5em] mb-12">Academic Credits</h2>
-            <div class="flex flex-wrap justify-center gap-10">
-                <div class="glass px-12 py-8 rounded-[2rem] border-b-4 border-blue-600">
-                    <p class="text-[9px] font-bold text-blue-500 mb-2 uppercase tracking-widest">Project Guide</p>
-                    <p class="font-black text-xl text-slate-100">Dr. Juhi Singh</p>
+                        </div>
+                        <p class="text-slate-500 text-sm italic text-justify leading-relaxed">Subject-Level Balanced
+                            Accuracy: 74.58%<br>AUC: 0.7875<br>Sensitivity: 86.67%<br>Specificity: 62.5%<br>Compared
+                            against
+                            bandpower baseline (Balanced Accuracy: 71.46%)</p>
+                    </div>
                 </div>
-                <div class="glass px-12 py-8 rounded-[2rem] border-b-4 border-slate-700">
-                    <p class="text-[9px] font-bold text-slate-400 mb-2 uppercase tracking-widest">Team Member 1</p>
-                    <p class="font-black text-xl text-slate-100">Mahir Desai</p>
-                    <p class="text-[10px] text-slate-500 mt-1">23FE10CSE00345</p>
-                </div>
+            </section>
+
+            <div class="mt-12 text-center">
+                <span
+                    class="px-8 py-3 bg-green-600 rounded-full text-xs font-black uppercase tracking-widest shadow-lg">
+                    Conference Paper Accepted – ICICC 2026
+                </span>
             </div>
-        </section>
+
+
+
+            <section id="team" class="text-center pt-10 border-t border-slate-900">
+                <h2 class="text-[10px] font-black text-slate-600 uppercase tracking-[0.5em] mb-12">Academic Credits</h2>
+                <div class="flex flex-wrap justify-center gap-10">
+                    <div class="glass px-12 py-8 rounded-[2rem] border-b-4 border-blue-600">
+                        <p class="text-[9px] font-bold text-blue-500 mb-2 uppercase tracking-widest">Project Guide</p>
+                        <p class="font-black text-xl text-slate-100">Dr. Juhi Singh</p>
+                    </div>
+                    <div class="glass px-12 py-8 rounded-[2rem] border-b-4 border-slate-700">
+                        <p class="text-[9px] font-bold text-slate-400 mb-2 uppercase tracking-widest">Team Member 1</p>
+                        <p class="font-black text-xl text-slate-100">Mahir Desai</p>
+                        <p class="text-[10px] text-slate-500 mt-1">23FE10CSE00345</p>
+                    </div>
+                </div>
+            </section>
     </main>
 
     <footer class="py-12 text-center bg-black/40 border-t border-slate-900">
