--- a/index.html
+++ b/index.html
@@ -257,30 +257,36 @@
                             Performance</span>
                     </div>
 
-                    <div class="grid grid-cols-2 md:grid-cols-4 gap-6 mt-12 text-center">
+                    <div class="grid grid-cols-2 md:grid-cols-4 gap-4 mt-8 md:mt-12 text-center">
 
                         <div data-aos="fade-up"
-                            class="glass p-6 rounded-2xl border-t-4 border-blue-500 hover:scale-105 transition-transform duration-300">
-                            <p class="text-slate-400 text-xs uppercase tracking-widest mb-2">Balanced Accuracy</p>
-                            <h3 class="text-4xl font-black text-blue-400 counter" data-target="74.58">0</h3>
+                            class="glass p-3 md:p-6 rounded-2xl border-t-4 border-blue-500 hover:scale-105 transition-transform duration-300">
+                            <p class="text-slate-400 text-[10px] md:text-xs uppercase tracking-widest mb-1 truncate">
+                                Balanced Accuracy</p>
+                            <h3 class="text-2xl md:text-4xl font-black text-blue-400 counter" data-target="74.58">0</h3>
                         </div>
 
                         <div data-aos="fade-up" data-aos-delay="100"
-                            class="glass p-6 rounded-2xl border-t-4 border-purple-500 hover:scale-105 transition-transform duration-300">
-                            <p class="text-slate-400 text-xs uppercase tracking-widest mb-2">AUC</p>
-                            <h3 class="text-4xl font-black text-purple-400 counter" data-target="78.75">0</h3>
+                            class="glass p-3 md:p-6 rounded-2xl border-t-4 border-purple-500 hover:scale-105 transition-transform duration-300">
+                            <p class="text-slate-400 text-[10px] md:text-xs uppercase tracking-widest mb-1 truncate">AUC
+                            </p>
+                            <h3 class="text-2xl md:text-4xl font-black text-purple-400 counter" data-target="78.75">0
+                            </h3>
                         </div>
 
                         <div data-aos="fade-up" data-aos-delay="200"
-                            class="glass p-6 rounded-2xl border-t-4 border-green-500 hover:scale-105 transition-transform duration-300">
-                            <p class="text-slate-400 text-xs uppercase tracking-widest mb-2">Sensitivity</p>
-                            <h3 class="text-4xl font-black text-green-400 counter" data-target="86.67">0</h3>
+                            class="glass p-3 md:p-6 rounded-2xl border-t-4 border-green-500 hover:scale-105 transition-transform duration-300">
+                            <p class="text-slate-400 text-[10px] md:text-xs uppercase tracking-widest mb-1 truncate">
+                                Sensitivity</p>
+                            <h3 class="text-2xl md:text-4xl font-black text-green-400 counter" data-target="86.67">0
+                            </h3>
                         </div>
 
                         <div data-aos="fade-up" data-aos-delay="300"
-                            class="glass p-6 rounded-2xl border-t-4 border-red-500 hover:scale-105 transition-transform duration-300">
-                            <p class="text-slate-400 text-xs uppercase tracking-widest mb-2">Specificity</p>
-                            <h3 class="text-4xl font-black text-red-400 counter" data-target="62.5">0</h3>
+                            class="glass p-3 md:p-6 rounded-2xl border-t-4 border-red-500 hover:scale-105 transition-transform duration-300">
+                            <p class="text-slate-400 text-[10px] md:text-xs uppercase tracking-widest mb-1 truncate">
+                                Specificity</p>
+                            <h3 class="text-2xl md:text-4xl font-black text-red-400 counter" data-target="62.5">0</h3>
                         </div>
 
                     </div>
