--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <div
                 class="inline-block px-4 py-1 border border-slate-800 rounded-full text-slate-500 text-[10px] font-mono mb-6 uppercase tracking-widest">
                 ID: 23FE10CSE00345</div>
-            <h1 class="text-6xl md:text-7xl font-extrabold mb-8 uppercase leading-tight"><span
+            <h1 class="text-5xl md:text-6xl font-extrabold mb-8 uppercase leading-snug"><span
                     class="gradient-text uppercase">Reliable Parkinson’s Disease Detection from EEG using Strict
                     Subject-Wise Validation</span></h1>
             <p
@@ -120,10 +120,13 @@
             </p>
         </section>
 
+        <div class="h-[1px] bg-white/10 my-16"></div>
+
         <section id="problem" class="grid md:grid-cols-2 gap-12 items-stretch">
             <div class="glass p-10 rounded-[2.5rem] flex flex-col justify-center border-l-4 border-blue-600">
                 <h2 class="text-3xl font-extrabold mb-6">Problem Statement</h2>
-                <p class="text-slate-400 leading-relaxed text-justify">Most EEG-based Parkinson’s disease detection
+                <p class="text-slate-400 leading-relaxed text-justify text-base">Most EEG-based Parkinson’s disease
+                    detection
                     studies report extremely high accuracy due to subject-dependent cross-validation, which causes data
                     leakage. Such evaluation strategies lead to inflated performance estimates and poor generalization
                     to unseen patients. There is a critical need for strict subject-wise validation to obtain realistic
@@ -133,7 +136,8 @@
                 <div class="glass p-7 rounded-3xl border-r-4 border-blue-500/50">
                     <h3 class="text-blue-400 font-bold text-xs uppercase tracking-widest mb-2">Literature Review /
                         Market Research</h3>
-                    <p class="text-sm text-slate-500 italic">Recent deep learning approaches including CNNs, GNNs, and
+                    <p class="text-base text-slate-500 italic leading-relaxed">Recent deep learning approaches including
+                        CNNs, GNNs, and
                         time-frequency models report accuracies exceeding 95% using window-wise cross-validation.
                         However, studies applying strict Leave-One-Subject-Out (LOSO) validation report significantly
                         lower but realistic performance (~63–75%), highlighting methodological weaknesses in existing
@@ -142,13 +146,16 @@
                 <div class="glass p-7 rounded-3xl border-r-4 border-purple-500/50">
                     <h3 class="text-purple-400 font-bold text-xs uppercase tracking-widest mb-2">Research Gap /
                         Innovation</h3>
-                    <p class="text-sm text-slate-500 italic">The major gap in existing research is the lack of strict
+                    <p class="text-base text-slate-500 italic leading-relaxed">The major gap in existing research is the
+                        lack of strict
                         subject-level validation. Most studies optimize architectural complexity while ignoring
                         validation rigor. Our work emphasizes methodological discipline using Leave-One-Subject-Out
                         validation to ensure real-world reliability.</p>
                 </div>
             </div>
         </section>
+
+        <div class="h-[1px] bg-white/10 my-16"></div>
 
         <section id="methodology" class="space-y-12">
             <h2 class="text-4xl font-black text-center uppercase tracking-tight">System <span
@@ -179,6 +186,8 @@
             </div>
         </section>
 
+        <div class="h-[1px] bg-white/10 my-16"></div>
+
         <section id="pipeline" class="space-y-16 text-center">
             <h2 class="text-4xl font-black uppercase tracking-tight">
                 Research <span class="text-blue-500">Workflow</span>
@@ -191,7 +200,7 @@
                     <h3 class="font-black text-lg uppercase tracking-wider">Raw EEG Data</h3>
                 </div>
 
-                <i class="fas fa-arrow-down text-slate-500 text-xl animate-bounce"></i>
+                <i class="fas fa-arrow-down text-slate-500 text-xl"></i>
 
                 <!-- Step 2: Preprocessing -->
                 <div data-aos="fade-up"
@@ -199,7 +208,7 @@
                     <h3 class="font-black text-lg uppercase tracking-wider">Preprocessing and Windowing</h3>
                 </div>
 
-                <i class="fas fa-arrow-down text-slate-500 text-xl animate-bounce"></i>
+                <i class="fas fa-arrow-down text-slate-500 text-xl"></i>
 
                 <!-- Step 3: EEGNet Architecture Block -->
                 <div data-aos="fade-up" class="p-8 rounded-[2rem] border-2 border-blue-500/30 bg-blue-500/5 relative">
@@ -225,7 +234,7 @@
                     </div>
                 </div>
 
-                <i class="fas fa-arrow-down text-slate-500 text-xl animate-bounce"></i>
+                <i class="fas fa-arrow-down text-slate-500 text-xl"></i>
 
                 <!-- Step 4: Aggregation -->
                 <div data-aos="fade-up"
@@ -233,7 +242,7 @@
                     <h3 class="font-black text-lg uppercase tracking-wider">Subject-Level Aggregation</h3>
                 </div>
 
-                <i class="fas fa-arrow-down text-slate-500 text-xl animate-bounce"></i>
+                <i class="fas fa-arrow-down text-slate-500 text-xl"></i>
 
                 <!-- Step 5: Evaluation -->
                 <div data-aos="fade-up"
@@ -243,7 +252,9 @@
             </div>
         </section>
 
-        <section id="results" class="glass p-12 rounded-[3.5rem] border-t-4 border-blue-500">
+        <div class="h-[1px] bg-white/10 my-16"></div>
+
+        <section id="results" class="glass p-12 rounded-[3.5rem]">
             <h2 class="text-3xl font-black mb-2 text-center uppercase tracking-tight">Results & <span
                     class="text-blue-500">Analysis</span></h2>
             <p class="text-center text-slate-500 text-xs font-medium uppercase tracking-widest mb-12 opacity-80">
@@ -296,6 +307,27 @@
                         bandpower baseline (Balanced Accuracy: 71.46%)</p>
                 </div>
             </div>
+        </section>
+
+        <div class="h-[1px] bg-white/10 my-16"></div>
+
+        <section class="text-center space-y-8">
+            <h2 class="text-2xl font-black uppercase tracking-tight text-slate-300">Confusion Matrix (Subject-Level)
+            </h2>
+            <img src="confusion_matrix.png" alt="Confusion Matrix"
+                class="rounded-2xl shadow-md max-w-3xl mx-auto w-full border border-white/10">
+            <p class="text-slate-500 text-sm italic">High sensitivity for Parkinson’s detection (86.67%) with moderate
+                specificity (62.5%).</p>
+        </section>
+
+        <div class="h-[1px] bg-white/10 my-16"></div>
+
+        <section class="text-center space-y-8">
+            <h2 class="text-2xl font-black uppercase tracking-tight text-slate-300">Receiver Operating Characteristic
+            </h2>
+            <img src="roc_eegnet.png" alt="ROC Curve"
+                class="rounded-2xl shadow-md max-w-3xl mx-auto w-full border border-white/10">
+            <p class="text-slate-500 text-sm italic">AUC = 0.7875 under strict Leave-One-Subject-Out validation.</p>
         </section>
 
         <div class="mt-12 text-center">
