Refactor: Academic repository structure for ICICC 2026

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
         <section class="text-center space-y-8">
             <h2 class="text-2xl font-black uppercase tracking-tight text-slate-300">Confusion Matrix (Subject-Level)
             </h2>
-            <img src="confusion_matrix.png" alt="Confusion Matrix"
+            <img src="figures/confusion_matrix.png" alt="Confusion Matrix"
                 class="rounded-2xl shadow-md max-w-3xl mx-auto w-full border border-white/10">
             <p class="text-slate-500 text-sm italic">High sensitivity for Parkinson’s detection (86.67%) with moderate
                 specificity (62.5%).</p>
@@ -325,7 +325,7 @@
         <section class="text-center space-y-8">
             <h2 class="text-2xl font-black uppercase tracking-tight text-slate-300">Receiver Operating Characteristic
             </h2>
-            <img src="roc_eegnet.png" alt="ROC Curve"
+            <img src="figures/roc_eegnet.png" alt="ROC Curve"
                 class="rounded-2xl shadow-md max-w-3xl mx-auto w-full border border-white/10">
             <p class="text-slate-500 text-sm italic">AUC = 0.7875 under strict Leave-One-Subject-Out validation.</p>
         </section>
