--- a/index.html
+++ b/index.html
@@ -20,35 +20,39 @@
 
 
         body {
-            background: radial-gradient(circle at 20% 30%, rgba(59, 130, 246, 0.12), transparent 40%),
-                radial-gradient(circle at 80% 70%, rgba(168, 85, 247, 0.10), transparent 40%),
-                #020617;
+            background-color: #020617;
+            background-image: linear-gradient(180deg, #020617 0%, #0f172a 100%);
             color: #f8fafc;
             font-family: 'Plus Jakarta Sans', sans-serif;
             scroll-behavior: smooth;
         }
 
         body.light-mode {
-            background: #f8fafc;
-            color: #0f172a;
+            background: #f9fafb;
+            color: #1f2937;
         }
 
         body.light-mode .glass {
-            background: rgba(0, 0, 0, 0.03);
-            border: 1px solid rgba(0, 0, 0, 0.08);
-            box-shadow: 0 10px 40px rgba(0, 0, 0, 0.05);
+            background: #ffffff;
+            border: 1px solid #e5e7eb;
+            box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+            backdrop-filter: none;
         }
 
         body.light-mode .text-slate-300 {
-            color: #475569;
+            color: #1f2937;
         }
 
         body.light-mode .text-slate-400 {
-            color: #64748b;
+            color: #4b5563;
         }
 
         body.light-mode .text-slate-500 {
-            color: #94a3b8;
+            color: #6b7280;
+        }
+
+        body.light-mode .section-subtitle {
+            color: #4b5563;
         }
 
         .glass {
@@ -101,7 +105,6 @@
 </head>
 
 <body onload="startTimer()">
-    <canvas id="particleCanvas" class="fixed top-0 left-0 w-full h-full pointer-events-none z-[-1]"></canvas>
 
     <div id="timerContainer"
         class="fixed bottom-10 right-10 px-8 py-4 rounded-3xl flex items-center gap-4 transition-all">
@@ -117,9 +120,9 @@
                     onerror="this.src='https://via.placeholder.com/50?text=MUJ'">
             </div>
             <div class="flex flex-col text-left">
-                <span class="text-xl font-black text-white leading-none uppercase tracking-tighter">PBL <span
+                <span class="text-base font-bold text-white leading-none uppercase tracking-wide">PBL <span
                         class="text-blue-500 italic">2026</span></span>
-                <span class="text-[9px] text-slate-400 font-bold uppercase tracking-widest mt-1">Dept. of Computer
+                <span class="text-[10px] text-slate-400 font-semibold uppercase tracking-wide mt-1">Dept. of Computer
                     Science & Engineering</span>
             </div>
         </div>
@@ -132,13 +135,13 @@
         </div>
     </nav>
 
-    <main class="max-w-6xl mx-auto px-6 pt-48 pb-32 space-y-32">
+    <main class="max-w-6xl mx-auto px-6 pt-48 pb-32 space-y-24">
 
         <section class="text-center">
             <div
                 class="inline-block px-4 py-1 border border-slate-800 rounded-full text-slate-500 text-[10px] font-mono mb-6 uppercase tracking-widest">
                 ID: 23FE10CSE00345</div>
-            <h1 class="text-5xl md:text-7xl lg:text-8xl font-extrabold mb-8 uppercase leading-snug"><span
+            <h1 class="text-4xl md:text-5xl font-extrabold mb-8 uppercase leading-snug"><span
                     class="gradient-text uppercase">Reliable Parkinson’s Disease Detection from EEG using Strict
                     Subject-Wise Validation</span></h1>
             <p
@@ -148,11 +151,11 @@
             </p>
         </section>
 
-        <div class="h-[1px] bg-white/10 my-16"></div>
+        <div class="h-[1px] bg-white/10 my-12"></div>
 
         <section id="problem" class="grid md:grid-cols-2 gap-12 items-stretch">
             <div class="glass p-10 rounded-[2.5rem] flex flex-col justify-center border-l-4 border-blue-600">
-                <h2 class="text-4xl md:text-5xl font-extrabold mb-6">Problem Statement</h2>
+                <h2 class="text-4xl md:text-5xl font-extrabold mb-6 uppercase">Problem Statement</h2>
                 <p class="text-slate-300 leading-relaxed text-justify text-base">Most EEG-based Parkinson’s disease
                     detection
                     studies report extremely high accuracy due to subject-dependent cross-validation, which causes data
@@ -162,7 +165,8 @@
             </div>
             <div class="space-y-6">
                 <div class="glass p-7 rounded-3xl border-r-4 border-blue-500/50">
-                    <h3 class="text-blue-400 font-bold text-xs uppercase tracking-widest mb-2">Literature Review /
+                    <h3 class="text-blue-400 font-bold text-xs uppercase tracking-widest mb-2 section-subtitle">
+                        Literature Review /
                         Market Research</h3>
                     <p class="text-base text-slate-300 italic leading-relaxed">Recent deep learning approaches including
                         CNNs, GNNs, and
@@ -172,7 +176,8 @@
                         literature.</p>
                 </div>
                 <div class="glass p-7 rounded-3xl border-r-4 border-purple-500/50">
-                    <h3 class="text-purple-400 font-bold text-xs uppercase tracking-widest mb-2">Research Gap /
+                    <h3 class="text-purple-400 font-bold text-xs uppercase tracking-widest mb-2 section-subtitle">
+                        Research Gap /
                         Innovation</h3>
                     <p class="text-base text-slate-300 italic leading-relaxed">The major gap in existing research is the
                         lack of strict
@@ -183,7 +188,7 @@
             </div>
         </section>
 
-        <div class="h-[1px] bg-white/10 my-16"></div>
+        <div class="h-[1px] bg-white/10 my-12"></div>
 
         <section id="methodology" class="space-y-12">
             <h2 class="text-4xl md:text-5xl font-black text-center uppercase tracking-tight">System <span
@@ -300,14 +305,14 @@
 
                         <div data-aos="fade-up"
                             class="glass p-3 md:p-6 rounded-2xl border-t-4 border-blue-500 hover:scale-105 transition-transform duration-300 min-w-0 hover:shadow-[0_0_25px_rgba(59,130,246,0.4)]">
-                            <p class="text-slate-400 text-[10px] md:text-xs uppercase tracking-widest mb-1">
+                            <p class="text-slate-400 text-[10px] md:text-xs uppercase tracking-wide mb-1">
                                 Balanced Accuracy</p>
                             <h3 class="text-4xl md:text-5xl font-black text-blue-400 counter" data-target="74.58">0</h3>
                         </div>
 
                         <div data-aos="fade-up" data-aos-delay="100"
                             class="glass p-3 md:p-6 rounded-2xl border-t-4 border-purple-500 hover:scale-105 transition-transform duration-300 min-w-0 hover:shadow-[0_0_25px_rgba(168,85,247,0.4)]">
-                            <p class="text-slate-400 text-[10px] md:text-xs uppercase tracking-widest mb-1">AUC
+                            <p class="text-slate-400 text-[10px] md:text-xs uppercase tracking-wide mb-1">AUC
                             </p>
                             <h3 class="text-4xl md:text-5xl font-black text-purple-400 counter" data-target="78.75">0
                             </h3>
@@ -315,7 +320,7 @@
 
                         <div data-aos="fade-up" data-aos-delay="200"
                             class="glass p-3 md:p-6 rounded-2xl border-t-4 border-green-500 hover:scale-105 transition-transform duration-300 min-w-0 hover:shadow-[0_0_25px_rgba(34,197,94,0.4)]">
-                            <p class="text-slate-400 text-[10px] md:text-xs uppercase tracking-widest mb-1">
+                            <p class="text-slate-400 text-[10px] md:text-xs uppercase tracking-wide mb-1">
                                 Sensitivity</p>
                             <h3 class="text-4xl md:text-5xl font-black text-green-400 counter" data-target="86.67">0
                             </h3>
@@ -323,7 +328,7 @@
 
                         <div data-aos="fade-up" data-aos-delay="300"
                             class="glass p-3 md:p-6 rounded-2xl border-t-4 border-red-500 hover:scale-105 transition-transform duration-300 min-w-0 hover:shadow-[0_0_25px_rgba(239,68,68,0.4)]">
-                            <p class="text-slate-400 text-[10px] md:text-xs uppercase tracking-widest mb-1">
+                            <p class="text-slate-400 text-[10px] md:text-xs uppercase tracking-wide mb-1">
                                 Specificity</p>
                             <h3 class="text-4xl md:text-5xl font-black text-red-400 counter" data-target="62.5">0</h3>
                         </div>
@@ -468,60 +473,7 @@
             }
         }
 
-        // PERTICLE BACKGROUND
-        const canvas = document.getElementById('particleCanvas');
-        const ctxCanvas = canvas.getContext('2d');
-        let particlesArray;
 
-        canvas.width = window.innerWidth;
-        canvas.height = window.innerHeight;
-
-        class Particle {
-            constructor() {
-                this.x = Math.random() * canvas.width;
-                this.y = Math.random() * canvas.height;
-                this.size = Math.random() * 2;
-                this.speedX = (Math.random() * 0.2) - 0.1;
-                this.speedY = (Math.random() * 0.2) - 0.1;
-            }
-            update() {
-                this.x += this.speedX;
-                this.y += this.speedY;
-                if (this.x < 0 || this.x > canvas.width) this.speedX *= -1;
-                if (this.y < 0 || this.y > canvas.height) this.speedY *= -1;
-            }
-            draw() {
-                ctxCanvas.fillStyle = 'rgba(255, 255, 255, 0.05)';
-                ctxCanvas.beginPath();
-                ctxCanvas.arc(this.x, this.y, this.size, 0, Math.PI * 2);
-                ctxCanvas.fill();
-            }
-        }
-
-        function initParticles() {
-            particlesArray = [];
-            for (let i = 0; i < 40; i++) {
-                particlesArray.push(new Particle());
-            }
-        }
-
-        function animateParticles() {
-            ctxCanvas.clearRect(0, 0, canvas.width, canvas.height);
-            for (let i = 0; i < particlesArray.length; i++) {
-                particlesArray[i].update();
-                particlesArray[i].draw();
-            }
-            requestAnimationFrame(animateParticles);
-        }
-
-        initParticles();
-        animateParticles();
-
-        window.addEventListener('resize', () => {
-            canvas.width = window.innerWidth;
-            canvas.height = window.innerHeight;
-            initParticles();
-        });
     </script>
 </body>
 
